--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Web API Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index,js",
-    "server": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
